<resources>
    <string name="app_name">UETMail</string>
    <string name="app_id">com.nc.uetmail</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="mail_default_label">Label</string>
    <string name="mail_default_hint">Hint</string>
    <string name="mail_default_btn">This is Button</string>
    <string name="mail_attach_invalid">Attach file is not valid</string>
    <string name="mail_input_require_invalid">Please enter valid input and require field</string>
    <string name="mail_invalid_encrypt_password">Password encrypt error</string>

    <string name="mail_back">Back</string>
    <string name="mail_folder">Folder</string>
    <string name="mail_letter_a">A</string>
    <string name="mail_letter_plus">+</string>
    <string name="mail_advanced">Advanced</string>
    <string name="mail_next">Next</string>
    <string name="mail_expand">Expand</string>
    <string name="mail_finish">Finish</string>
    <string name="mail_config_inbox">Incoming server</string>
    <string name="mail_config_outbox">Outgoing server</string>
    <string name="mail_add">Add</string>
    <string name="mail_sync">Sync</string>
    <string name="mail_loading">Loading...</string>
    <string name="mail_flag_clear">clear</string>
    <string name="mail_sync_start">Sync Start</string>
    <string name="mail_sync_failed">Sync Failed</string>
    <string name="mail_sync_finish">Sync Finish</string>
    <string name="mail_select_user">Select user</string>
    <string name="mail_add_user">Add user</string>
    <string name="mail_add_google_user">Add google user</string>
    <string name="mail_add_google_fail">Add google user failed</string>
    <string name="mail_add_google_pms_fail">Permission denied</string>
    <string name="mail_add_google_pick_fail">No account selected or Permission denied</string>
    <string name="mail_try_again">Try again</string>
    <string name="mail_delete">Delete</string>
    <string name="mail_search">Search</string>
    <string name="mail_delete_local">Empty all offline data</string>
    <string name="mail_edit">Edit</string>
    <string name="mail_cc_hint">nc@nc.com, nghichcode@nc.com</string>
    <string name="mail_attachment">Attachment</string>
    <string name="mail_attach_file">this_is_attach_file.png</string>
    <string name="mail_attach_file_size">10 Kb</string>
    <string name="mail_reply">Reply</string>
    <string name="mail_reply_all">Reply All</string>
    <string name="mail_forward">Forward</string>

    <string name="mail_deleted">Deleted</string>
    <string name="mail_archived">Archived</string>
    <string name="mail_send">Send</string>
    <string name="mail_sending">Sending</string>

    <string name="mail_inbox">Inbox</string>
    <string name="mail_archive">Archive</string>
    <string name="mail_drafts">Drafts</string>
    <string name="mail_sent">Sent</string>
    <string name="mail_trash">Trash</string>
    <string name="mail_spam">Spam</string>
    <string name="mail_other">Other</string>
    <string name="mail_settings">Settings</string>
    <string name="mail_about">About</string>

    <string name="mail_compose">Write some thing...</string>
    <string name="mail_compose_from" translatable="false">From</string>
    <string name="mail_compose_to">To</string>
    <string name="mail_compose_cc">Cc</string>
    <string name="mail_compose_bcc">Bcc</string>
    <string name="mail_compose_subject">Subject</string>

    <string name="mail_row_user">NghichCode</string>
    <string name="mail_row_folder_ellipsis">...</string>
    <string name="mail_row_folder_name">parent/childA/childB</string>
    <string name="mail_row_folder_count">40/100 (unread/total)</string>
    <string name="mail_row_users">NghichCode, Volutpat, Ipsum, Eget, Consectetur, Adipiscing</string>
    <string name="mail_row_user_with_mail">NghichCode (nghichcode@gmail.com)</string>
    <string name="mail_row_empty_user">Empty user</string>
    <string name="mail_row_empty_user_hint">Please add user</string>
    <string name="mail_row_title">Lorem ipsum dolor sit amet, consectetur adipiscing elit</string>
    <string name="mail_row_body_txt">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque volutpat ipsum eget aliquet dapibus. Ut accumsan leo in est veh...</string>
    <string name="mail_row_date">11:14 16/10</string>

    <string name="mail_about_title">App Info</string>
    <string name="mail_about_body">UET Mail.\nOnly support vnu.edu.vn.\nContact: nghichcode@gmail.com</string>

    <string name="mail_title_success">Success</string>
    <string name="mail_title_danger">Error</string>
    <string name="mail_title_warning">Warning</string>
    <string name="mail_title_info">Info</string>

    <string name="mail_config_email_rq">Email *</string>
    <string name="mail_config_email">Email</string>
    <string name="mail_config_user">Username</string>
    <string name="mail_config_pass_rq">Password *</string>
    <string name="mail_config_pass">Password</string>
    <string name="mail_config_host">Hostname</string>
    <string name="mail_config_type">Connection Type</string>
    <string name="mail_config_port">Port</string>

    <string name="mail_config_email_hint">nc@nghichcode.com</string>
    <string name="mail_config_user_hint">nc</string>
    <string name="mail_config_option_hint">( Optional )</string>
    <string name="mail_config_host_hint">imap.nghichcode.com</string>
    <string name="mail_config_host_out_hint">smtp.nghichcode.com</string>
    <string name="mail_config_type_hint">None</string>

    <string name="mail_error_user_none">Not have user account</string>
    <string name="mail_unread_count">unread/total</string>
</resources>
