<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/mail_home_nav_inbox"
            android:icon="@drawable/ic_home_mail"
            android:title="@string/mail_inbox" />
        <item
            android:id="@+id/mail_home_nav_archive"
            android:icon="@drawable/ic_home_archive"
            android:title="@string/mail_archive" />
        <item
            android:id="@+id/mail_home_nav_drafts"
            android:icon="@drawable/ic_home_drafts"
            android:title="@string/mail_drafts" />
        <item
            android:id="@+id/mail_home_nav_sent"
            android:icon="@drawable/ic_home_sent"
            android:title="@string/mail_sent" />
        <item
            android:id="@+id/mail_home_nav_trash"
            android:icon="@drawable/ic_delete"
            android:title="@string/mail_trash" />
        <item
            android:id="@+id/mail_home_nav_spam"
            android:icon="@drawable/ic_home_spam"
            android:title="@string/mail_spam" />
        <item
            android:id="@+id/mail_home_nav_other"
            android:icon="@drawable/ic_folder"
            android:title="@string/mail_other" />
    </group>

    <item android:title="">
        <menu>
            <item
                android:id="@+id/mail_home_nav_manage"
                android:icon="@drawable/ic_build"
                android:title="@string/action_settings" />
        </menu>
    </item>

</menu>
