<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/mail_row_folder_back_group"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:baselineAligned="false"
    android:orientation="horizontal"
    android:paddingVertical="@dimen/size_6">

    <ImageView
        android:layout_width="@dimen/size_40"
        android:layout_height="@dimen/size_40"
        android:contentDescription="@string/mail_folder"
        android:src="@drawable/ic_folder_yellow" />

    <LinearLayout
        style="@style/MailComponents.RowBody"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            style="@style/MailComponents.h4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/mail_row_folder_ellipsis"
            android:textColor="@color/colorBlack" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/mail_back"
            android:textColor="@color/colorBlack" />
    </LinearLayout>

</LinearLayout>