<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorDanger"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:theme="@style/ThemeOverlay.AppCompat.Dark">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/size_12">

        <ImageView
            android:id="@+id/mail_nav_drawer_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/nav_header_desc"
            android:paddingTop="@dimen/nav_header_vertical_spacing"
            app:srcCompat="@mipmap/mail_icon_round" />

        <TextView
            android:id="@+id/mail_nav_drawer_title"
            style="@style/MailComponents.TextLetter"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center|bottom"
            android:text="@string/app_name"

            android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/mail_home_nav_header_user_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            style="@style/MailComponents.TextViewLayout.Box"
            android:background="@drawable/mail_btn_disabled"
            android:layout_weight="10"
            android:orientation="vertical">

            <TextView
                android:id="@+id/mail_home_nav_header_user"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/mail_row_empty_user"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/mail_home_nav_header_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/mail_row_empty_user_hint"
                android:textSize="@dimen/size_12" />
        </LinearLayout>
        <ImageButton
            android:id="@+id/mail_home_nav_header_expand"
            style="@style/MailComponents.TextViewLayout.Box.TextWhite"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:background="@drawable/mail_btn_disabled"
            android:src="@drawable/ic_expand_more" />

    </LinearLayout>

</LinearLayout>
